# llm_poc

./: .gitignore  README.md  pyproject.toml
src/clients/: gemini_client.py
src/evaluation/: judge.py  metrics.py
src/llm_poc/: __main__.py  pipeline.py
src/prompts/: prompt_tasks.py  system_prompt.py
src/schemas/: classifier.py  forecast.py  normalize.py  summary.py
src/utils/: fixes.py  loader.py
